# diffyscan

./: .dockerignore  .env.example  .gitignore  .gitlint  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  config.sample.json  hardhat.config.js  hardhat_config.js  logger.py  main.py  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: regression.yml
.husky/: pre-commit
config_samples/: base_mainnet_config_L1.json  base_mainnet_config_L2.json  lido_dao_holesky_config.json  lido_dao_sepolia_config.json  linea_mainnet_config_L1.json  linea_mainnet_config_L1_tokenbridge.json  linea_testnet_config_L1_tokenbridge.json  linea_testnet_config_L2_proxyadmin.json  mantle_mainnet_config_L1.json  mantle_mainnet_config_L2.json  mantle_mainnet_config_L2_gov.json  mantle_testnet_config_L1.json  mantle_testnet_config_L2.json  optimism_mainnet_config_L1.json  optimism_mainnet_config_L2.json  zksync_mainnet_config_L2.json  zksync_testnet_config_L1.json  zksync_testnet_config_L2.json
config_samples/base/: base_mainnet_config_L1.json
config_samples/dualGovernance/: dual_governance_holesky_config.json  dual_governance_hoodi_config.json  dual_governance_hoodi_voting_config.json  dual_governance_mainnet_config.json  dual_governance_mainnet_voting_config.json
config_samples/ethereum/: mainnet_origin_arm.json
config_samples/ink/: ink_deployment_2025-11-16.json
config_samples/linea/: linea_mainnet_config_L2.json  linea_mainnet_config_L2_proxy.json
config_samples/megaeth/: megaeth_deployment_2026-01-07.json
config_samples/mellow/: common_config.json  common_dvsteth_config.json  dvsteth_config.json  dvsteth_oz_config.json  mevcap_config.json  mevcap_oz_config.json  p2p_config.json  p2p_oz_config.json  re7_config.json  re7_oz_config.json  steakhouse_config.json  steakhouse_oz_config.json  symbioticfi_config.json  symbioticifi_oz_config.json
config_samples/optimism/: optimism_mainnet_config_L1.json
config_samples/plasma/: plasma_deployment_2025-11-17.json
config_samples/primev/: primev_l1_audit.yaml  primev_l1_v1.1.0-contracts.yaml  primev_l1_v1.1.0-middleware.yaml  primev_l1_v1.2.0.yaml  primev_l2_v1.2.0.yaml  primev_l2_v1.2.1.yaml
diffyscan/: __init__.py  diffyscan.py
diffyscan/utils/: allowed_diffs.py  (+16 more)
hardhat_configs/: automaton_hardhat_config.js  automaton_hardhat_config.ts  base_hardhat_config.ts  holesky_hardhat.config.js  holesky_hardhat_config.js  holesky_hardhat_config.ts  hoodi_hardhat_config.js  hoodi_hardhat_config.ts  ink_hardhat_config.ts  mainnet_hardhat_config.js  mainnet_hardhat_config.ts  megaeth_hardhat_config.ts  plasma_hardhat_config.ts  sepolia_hardhat_config.js  sepolia_hardhat_config.ts  sepolia_optimism_hardhat_config.js  sepolia_optimism_hardhat_config.ts  sepolia_unichain_hardhat_config.js
tests/: test_allowed_diffs.py  test_binary_verifier.py  test_bytecode_metadata.py  test_compiler.py  test_config_loading.py  test_configs.py  test_contract_filter.py  test_deployment_from_config.py  test_diffyscan_allowlist_runtime.py  test_diffyscan_token_loading.py  test_error_resilience.py  test_explorer_utils.py  test_github_utils.py  test_local_compilation.py  test_no_wildcard_regression.py  test_refactored.py  test_utils.py
tools/: run_black_hook.py
utils/: arguments.py  common.py  constants.py  etherscan.py  explorer.py  github.py  logger.py  types.py
(+183 files in other folders)
