[tool.poetry]
name = "diffyscan"
version = "0.0.0"
description = "Diff your Ethereum smart contracts code from GitHub against Blockchain explorer verified source code."
authors = ["Azat Serikov <azatsdev@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lidofinance/diffyscan"
keywords = ["ethereum", "diff", "sources"]

package-mode = true
packages = [{ include = "diffyscan"}]
exclude = ["config_samples"]

[tool.poetry.scripts]
diffyscan = "diffyscan.diffyscan:main"

[tool.poetry.dependencies]
python = ">=3.11,<4"
requests = "^2.32.5"
termtables = "^0.2.4"
pyyaml = "^6.0"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
pytest = "^8.4.2"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
metadata = false

[tool.poetry-dynamic-versioning.substitution]
files = ["diffyscan/diffyscan.py"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
