[project]
name = "diffyscan"
version = "0.0.0"
description = "Diff your Ethereum smart contracts code from GitHub against Blockchain explorer verified source code."
authors = [{ name = "Azat Serikov", email = "azatsdev@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<4"
keywords = ["ethereum", "diff", "sources"]
dependencies = [
    "python-dotenv>=1.0,<2",
    "pyyaml>=6.0,<7",
    "requests>=2.32.5,<3",
    "termtables>=0.2.4,<0.3",
]

[project.urls]
Repository = "https://github.com/lidofinance/diffyscan"

[project.scripts]
diffyscan = "diffyscan.diffyscan:main"

[dependency-groups]
dev = [
    "black>=25.9.0,<27",
    "gitlint>=0.19,<1",
    "pre-commit>=4.3,<5",
    "pytest>=8.4.2,<9",
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["diffyscan"]

[tool.hatch.build.targets.sdist]
exclude = ["config_samples"]
